school-system/src/main/java/com/example/school/system/error/InvalidTokenExceptionHandler.java
package com.example.school.system.error;

public class InvalidTokenExceptionHandler extends RuntimeException {
    public InvalidTokenExceptionHandler(String message) {
        super(message);
    }
}
